# morettiBot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  env.template  pyproject.toml  source.template.json
bot/: init_db.py  main.py
